bynkc/tests/fixtures/positive/219_split_test_suffix/src/demo.bynk
commons demo

fn double(n: Int) -> Int {
  n * 2
}
