bynkc/tests/fixtures/negative/25_let_immutable/input.bynk
commons test {
  fn f(n: Int) -> Int {
    let x = n
    x = 5
    x
  }
}
